# atoms-demo

./: .env.example  .gitignore  AUTH_GUIDE.md  CUsersmengshupingDesktopdemoatoms-demo.gitignore  DEPLOY.md  README.md  docker-compose.yml  产品需求设计文档.md  原始需求.md  完成度报告.md
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: auth.py  generate.py  projects.py  sessions.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  project.py  user.py
backend/app/schemas/: project.py  user.py
backend/app/services/: ai_service.py  project_service.py
frontend/: .env.development  .env.production  .gitignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  env.d.ts
frontend/src/components/: AuthModal.vue  ChatPanel.vue  CodeEditor.vue  HistoryPanel.vue  PreviewPanel.vue
frontend/src/config/: index.ts
frontend/src/services/: api.ts
frontend/src/stores/: chat.ts  project.ts  user.ts
frontend/src/types/: index.ts
